Fixed the spacing between the attribution selections and the Create Thread button

--- a/app/assets/stylesheets/forum_threads.css.scss
+++ b/app/assets/stylesheets/forum_threads.css.scss
@@ -41,7 +41,10 @@ body {
 legend {
 	margin-top: 1em;
 }
-
+input[value="Create Thread"] {
+	position: relative;
+	top: 1em;
+}
 #forum_thread_real_allowed,
 #forum_thread_pseudo_allowed,
 #forum_thread_anon_allowed {
